--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   
   --color-bg: #040C18;
   --color-footer : #031B34;
+  --color-foter: #052D56;
   --color-blog: #042c54;
   --color-text: #81AFDD;
   --color-subtext: #FF8A71;
